--- a/app.properties
+++ b/app.properties
@@ -1,5 +1,9 @@
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/idea_db
+//hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+//hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/idea_db
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.username=postgres
-hibernate.connection.password=password
+//hibernate.connection.username=postgres
+//hibernate.connection.password=password
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=password
